# cv

./: .editorconfig  .gitignore  Jenkinsfile  README.md  data.tex  en.tex  fill_template.py  jenkinsfile  main.aux  main.fdb_latexmk  main.fls  main.out  main.py  main.tex  pyproject.toml  requirements.txt
.github/workflows/: compile.yml
content/: contacts.tex  data.tex  education.tex  experiences.tex  projects.tex  skills.tex
scripts/: fill_template.py  fill_template.sh  publish_target.sh
template/: main.tex  preamble.tex
template/.github/workflows/: compile.yml
template/content/: contacts.tex  data.tex  education.tex  experiences.tex  projects.tex  skills.tex
template/themes/base/: style.tex
themes/base/: style.tex
