[tool.poetry]
name = "cv"
version = "0.1.0"
description = ""
authors = ["Blackgolyb <andrejomelnickij@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
click = "^8.1.7"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"


[tool.ruff]
extend-select = [
    "I",  #isort
    "UP", #pyupgrade
    "F", #pyflakes
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
